--- a/views/home.erb
+++ b/views/home.erb
@@ -16,6 +16,7 @@
         <h2>Explore the API</h2>
 
         <div class="well">
+          <a href="/explore/accounts.json" class="btn" data-explore>Accounts</a>
           <a href="/explore/me.json" class="btn" data-explore>My Credentials</a>
           <a href="/explore/profiles.json" class="btn" data-explore>Profiles</a>
           <a href="/sign_out" class="btn primary">Sign out</a>
