--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,7 +9,7 @@
   <div class="topbar" data-scrollspy="scrollspy">
     <div class="fill">
       <div class="container">
-        <a class="brand" href="/">Sinatra Client</a>
+        <a class="brand" href="/">Unbounce Sinatra Client</a>
         <ul class="nav">
           <li><a href="#explore">Explore the API</a></li>
         </ul>
