First change... Basic functionality for navigating API is there, just need to generate CSV reports.

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Doorkeeper OAuth 2 Client (Sinatra)</title>
+  <title>UB Dope</title>
   <link type="text/css" rel="stylesheet" media="screen" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
   <link type="text/css" rel="stylesheet" media="screen" href="/application.css">
 </head>
@@ -9,9 +9,9 @@
   <div class="topbar" data-scrollspy="scrollspy">
     <div class="fill">
       <div class="container">
-        <a class="brand" href="/">Unbounce Sinatra Client</a>
+        <a class="brand" href="/">UB Dope (for Unbounce)</a>
         <ul class="nav">
-          <li><a href="#explore">Explore the API</a></li>
+          <li><a href="/sign_out">Sign Out</a></li>
         </ul>
       </div>
     </div>
